deploy/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: class-2
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: harbor-secret
      containers:
        - name: backend
          image: __BE_IMAGE__
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: class-2
spec:
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
