deploy/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sk037-frontend
  namespace: class-2
spec:
  selector:
    matchLabels:
      app: sk037-frontend
  template:
    metadata:
      labels:
        app: sk037-frontend
    spec:
      imagePullSecrets:
        - name: harbor-secret
      containers:
        - name: frontend
          image: __FE_IMAGE__
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: sk037-frontend
  namespace: class-2
spec:
  selector:
    app: sk037-frontend
  ports:
    - port: 8080
      targetPort: 80
  type: LoadBalancer
