deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-practice-app-svc
  namespace: class-2
spec:
  selector:
    app: devops-practice-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
